--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,6 +1,5 @@
-.header 
-    background-color: #fff
-    font-family: Mulish
+.navbar 
+    background-color: $light
     &-top
         display: flex
         align-items: center
@@ -10,6 +9,27 @@
     &__search
         margin-right: auto
         margin-left: 108px
+    &-bottom
+        background-color: $dark
+        width: 100%
+    &-menu
+        text-decoration: none
+        color: $light
+        list-style: none
+        margin: 0
+        display: flex
+        align-items: center
+        justify-content: space-between
+        background-color: $dark
+        padding: 31px 0
+        &__link
+            color: inherit
+            text-decoration: none
+            text-transform: uppercase
+            font-size: 14px
+            line-height: 18px
+.logo
+    width: 177px
 .search
     display: flex
     position: relative
