--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -5,6 +5,8 @@
 @media (max-width: 992px)
     .container
         max-width: 700px
+    .logo
+        width: 132px
     .navbar
         &-top
             padding-top: 30px
@@ -17,13 +19,36 @@
             &__link
                 font-size: 12px
                 line-height: 15px
+    .search
+        &__input
+            width: 340px
 
 @media (max-width: 768px)
     .container
         max-width: 676px
         width: 92%
-
-@media (max-width: 480px)
+    .navbar
+        &-menu, &__search, &__user
+            display: none
+    .menu
+        &-btn
+            display: flex
+            width: 16px
+            height: 11px
+            padding: 0
+            border: none
+            align-items: center
+            justify-content: space-between
+            flex-direction: column
+            cursor: pointer
+            &__line
+                width: 16px
+                height: 1px
+                background-color: $text-color
+                
+@media (max-width: 576px)
+    .logo
+        width: 99px
     .container
         max-width: 676px
         width: 92%
