--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 body {
   color: #333333;
   font-family: 'Mulish', sans-serif;
+  background-color: #F5FAFE;
 }
 
 .container {
@@ -472,6 +473,125 @@ template {
   color: #333333;
 }
 
+.breadcrumb-list {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 18px 0;
+  margin: 0;
+}
+
+.breadcrumb-list__link {
+  text-decoration: none;
+}
+
+.breadcrumb-list__item {
+  font-size: 10px;
+  line-height: 13px;
+}
+
+.breadcrumb-list__item:not(:last-child)::after {
+  content: '/';
+  margin-right: 4px;
+}
+
+.hotel {
+  padding-top: 24px;
+  padding-bottom: 70px;
+}
+
+.hotel-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hotel-info__left {
+  color: #333333;
+}
+
+.hotel-info__offer {
+  padding: 3px 9px 4px;
+  margin-top: 4px;
+  font-size: 10px;
+  line-height: 13px;
+}
+
+.hotel-name {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+  margin: 0;
+  margin-top: 5px;
+  display: inline;
+  margin-right: 14px;
+}
+
+.hotel-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.stars {
+  width: 100%;
+}
+
+.star {
+  width: 8px;
+  height: 8px;
+}
+
+.extras {
+  background-color: #EC1F46;
+  border-radius: 4px;
+  color: #fff;
+}
+
+.raiting {
+  padding: 9px 6px 6px;
+  max-width: 65px;
+  min-height: 45px;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.raiting__text {
+  font-weight: 600;
+  font-size: 8px;
+  line-height: 10px;
+}
+
+.raiting__counter {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.description {
+  font-size: 12px;
+  line-height: 15px;
+  margin: 0;
+  margin-top: 8px;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -538,6 +658,41 @@ template {
     height: 1px;
     background-color: #333333;
   }
+}
+
+.stars {
+  -ms-flex-preferred-size: auto;
+      flex-basis: auto;
+}
+
+.hotel-name {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.hotel-wrapper {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hotel-info__text {
+  width: 100%;
+}
+
+.hotel-info__name {
+  margin-top: 10px;
+}
+
+.hotel-info__rating {
+  display: none;
+}
+
+.hotel-info__offer {
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
+  margin-left: 0;
 }
 
 @media (max-width: 576px) {
