--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -4,6 +4,7 @@
 body 
     color: $text-color
     font-family: 'Mulish', sans-serif
+    background-color: $secondary
     
 .container
     max-width: 1110px
