--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -47,21 +47,23 @@
                 background-color: $text-color
     .stars
         flex-basis: auto
+        margin-right: 32px
     .hotel
+        padding-top: 5px
         &-name
             flex-basis: 100%
         &-wrapper
             justify-content: space-between
         &-info
-            &__text
+            &__left
                 width: 100%
             &__name
                 margin-top: 10px
-            &__rating
-                display: none
             &__offer
                 order: -1
                 margin-left: 0
+    .raiting
+        display: none
 @media (max-width: 576px)
     .logo
         width: 99px
