--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,14 +1,15 @@
 .hotel
-    padding-top: 24px
+    padding-top: 20px
     padding-bottom: 70px
     &-info
         display: flex
         justify-content: space-between
         align-items: center
+        padding-bottom: 20px
         &__left
             color: $text-color
         &__offer 
-            padding: 3px 9px 4px
+            padding: 4px 9px
             margin-top: 4px
             font-size: 10px
             line-height: 13px
@@ -25,30 +26,59 @@
         flex-wrap: wrap
         align-items: center
 .stars
-    width: 100%
-.star 
-    width: 8px
-    height: 8px
+    flex-basis: 100%
 .extras
     background-color: $primary
     border-radius: 4px
     color: $light
 .raiting
-    padding: 9px 6px 6px;
     max-width: 65px
     min-height: 45px
     text-align: center
-    justify-content: center
+    padding-top: 2px
     &__text
-        font-weight: 600
         font-size: 8px
         line-height: 10px
     &__counter
-        font-weight: bold
         font-size: 14px
         line-height: 18px
+    &__counter-max
+        font-size: 11px
 .description
     font-size: 12px
     line-height: 15px
     margin: 0
-    margin-top: 8px
+    margin-top: 4px
+.swiper-container 
+    width: 100%
+    height: 450px
+    border-radius: 8px
+    &:after
+        content: ''
+        width: 100%
+        position: absolute
+        height: 100%
+        top: 0
+        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+        z-index: 10
+.slider
+    width: 728px
+    &-button
+        position: absolute
+        top: 50%
+        transform: translateY(-50%)
+        z-index: 99
+        width: 30px
+        height: 30px
+        border: none
+        cursor: pointer
+        background-color: transparent
+        background-position: center
+        background-repeat: no-repeat
+        background-size: 10px
+        &--next
+            right: 18px
+            background-image: url(../img/arrow-next.svg)
+        &--prev
+            left: 18px
+            background-image: url(../img/arrow-prev.svg)
