--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ img {
   max-width: 100%;
 }
 
+button {
+  border: none;
+  cursor: pointer;
+}
+
 html {
   line-height: 1.15;
   /* 1 */
@@ -549,6 +554,28 @@ template {
           align-items: center;
 }
 
+.hotel-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hotel-data {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .stars {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
@@ -594,17 +621,6 @@ template {
   border-radius: 8px;
 }
 
-.swiper-container:after {
-  content: '';
-  width: 100%;
-  position: absolute;
-  height: 100%;
-  top: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 122, 223, 0.48)), to(rgba(255, 255, 255, 0.128)));
-  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
-  z-index: 10;
-}
-
 .slider {
   width: 728px;
 }
@@ -617,7 +633,6 @@ template {
   z-index: 99;
   width: 30px;
   height: 30px;
-  border: none;
   cursor: pointer;
   background-color: transparent;
   background-position: center;
@@ -633,6 +648,137 @@ template {
 .slider-button--prev {
   left: 18px;
   background-image: url(../img/arrow-prev.svg);
+}
+
+.booking {
+  background-color: #0A223D;
+  border-radius: 8px;
+  width: 350px;
+  min-height: 210px;
+  padding: 27px 28px;
+  color: #fff;
+}
+
+.booking__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 9px;
+}
+
+.booking__room {
+  margin-top: 4px;
+  font-family: Nunito;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.booking__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-style: normal;
+  font-weight: normal;
+  margin-bottom: 8px;
+}
+
+.booking__description {
+  margin-left: 9px;
+}
+
+.booking__button {
+  width: 100%;
+  min-height: 45px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+}
+
+.price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.price__start {
+  font-family: Nunito;
+  font-size: 10px;
+  line-height: 14px;
+}
+
+.price__pricetag {
+  font-family: Nunito;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 33px;
+}
+
+.price__per-room {
+  font-family: Nunito;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.call-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 17px;
+}
+
+.call-center__text {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.call-center__phone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: inherit;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.call-center__num {
+  margin-left: 8px;
+}
+
+.map {
+  width: 348px;
+  height: 213px;
+  border-radius: 10px;
 }
 
 @media (max-width: 1200px) {
