--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -25,6 +25,14 @@
         display: flex
         flex-wrap: wrap
         align-items: center
+    &-grid
+        display: flex
+        justify-content: space-between
+    &-data
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+
 .stars
     flex-basis: 100%
 .extras
@@ -53,14 +61,6 @@
     width: 100%
     height: 450px
     border-radius: 8px
-    &:after
-        content: ''
-        width: 100%
-        position: absolute
-        height: 100%
-        top: 0
-        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-        z-index: 10
 .slider
     width: 728px
     &-button
@@ -70,7 +70,6 @@
         z-index: 99
         width: 30px
         height: 30px
-        border: none
         cursor: pointer
         background-color: transparent
         background-position: center
@@ -82,3 +81,78 @@
         &--prev
             left: 18px
             background-image: url(../img/arrow-prev.svg)
+.booking
+    background-color: #0A223D
+    border-radius: 8px
+    width: 350px
+    min-height: 210px
+    padding: 27px 28px
+    color: $light
+    &__info
+        display: flex
+        justify-content: space-between
+        margin-bottom: 9px
+    &__room
+        margin-top: 4px
+        font-family: Nunito
+        font-size: 12px
+        line-height: 16px
+    &__text
+        display: flex
+        align-items: center
+        justify-content: space-between
+        font-style: normal
+        font-weight: normal
+        margin-bottom: 8px
+    &__description
+        margin-left: 9px
+    &__button
+        width: 100%
+        min-height: 45px
+        font-style: normal
+        font-weight: 600
+        font-size: 14px
+        line-height: 19px
+.price
+    display: flex
+    flex-direction: column
+    &__start
+        font-family: Nunito
+        font-size: 10px
+        line-height: 14px
+    &__pricetag
+        font-family: Nunito
+        font-weight: 800
+        font-size: 24px
+        line-height: 33px
+    &__per-room
+        font-family: Nunito
+        font-size: 12px
+        line-height: 16px
+.call-center
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 17px
+    &__text
+        font-style: normal
+        font-weight: 600
+        font-size: 18px
+        line-height: 25px;
+    &__phone
+        display: flex
+        align-items: center
+        justify-content: space-between
+        color: inherit
+        text-decoration: none
+        font-style: normal
+        font-weight: 600
+        font-size: 18px
+        line-height: 25px
+    &__num
+        margin-left: 8px
+.map
+    width: 348px
+    height: 213px
+    border-radius: 10px
+    
