--- a/css/style.css
+++ b/css/style.css
@@ -617,12 +617,13 @@ template {
 
 .swiper-container {
   width: 100%;
-  height: 450px;
+  height: 100%;
   border-radius: 8px;
 }
 
 .slider {
   width: 728px;
+  height: 450px;
 }
 
 .slider-button {
@@ -776,14 +777,22 @@ template {
 }
 
 .map {
-  width: 348px;
+  width: 347px;
   height: 213px;
-  border-radius: 10px;
 }
 
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
+  }
+  .slider {
+    width: 590px;
+  }
+  .swiper-slide__img {
+    height: 100%;
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
@@ -810,6 +819,28 @@ template {
     line-height: 15px;
   }
   .search__input {
+    width: 340px;
+  }
+  .hotel-grid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel-data {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .slider {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .booking {
+    width: 340px;
+  }
+  .map {
     width: 340px;
   }
 }
@@ -879,6 +910,22 @@ template {
   .raiting {
     display: none;
   }
+  .slider {
+    height: 350px;
+  }
+  .hotel-data {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-height: 450px;
+  }
+  .booking {
+    width: 100%;
+  }
+  .map {
+    width: 100%;
+  }
 }
 
 @media (max-width: 576px) {
@@ -892,6 +939,10 @@ template {
   .navbar-top {
     padding-top: 30px;
     padding-bottom: 30px;
+  }
+  .slider {
+    height: 250px;
+    margin-bottom: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
