--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -59,10 +59,11 @@
     margin-top: 4px
 .swiper-container 
     width: 100%
-    height: 450px
+    height: 100%
     border-radius: 8px
 .slider
     width: 728px
+    height: 450px
     &-button
         position: absolute
         top: 50%
@@ -152,7 +153,6 @@
     &__num
         margin-left: 8px
 .map
-    width: 348px
+    width: 347px
     height: 213px
-    border-radius: 10px
     
