--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,6 +11,7 @@
                 object-fit: cover
 
 @media (max-width: 992px)
+    .newsletter-wrapper,
     .container
         max-width: 700px
     .logo
@@ -93,6 +94,12 @@
         width: 100%
     .map
         width: 100%
+    .newsletter
+        &-wrapper
+            flex-direction: column
+            max-width: 676px
+            width: 92%
+            align-items: flex-start
 @media (max-width: 576px)
     .logo
         width: 99px
@@ -106,3 +113,18 @@
     .slider
         height: 250px
         margin-bottom: 20px
+
+@media (max-width: 576px)
+    .logo
+        width: 99px
+    .slider
+        height: 179px
+    .hotel
+        &-data
+            height: 403px
+    .subscribe
+        width: 100%
+    .newsletter
+        padding: 76px 0 83px 0
+        &-title
+            margin-bottom: 37px
