--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -93,7 +93,7 @@
         display: flex
         justify-content: space-between
         margin-bottom: 9px
-    &__room
+    &-room
         margin-top: 4px
         font-family: Nunito
         font-size: 12px
