--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,4 +4,6 @@
 @import 'blocks/header'
 @import 'blocks/breadcrumb'
 @import 'blocks/hotel'
+@import 'blocks/newsletter'
+@import 'blocks/reviews'
 @import 'media'
