--- a/css/style.css
+++ b/css/style.css
@@ -1062,6 +1062,10 @@ template {
   .map {
     width: 340px;
   }
+  .reviews-slider__item {
+    max-width: 580px;
+    padding: 0 62px 30px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -1156,6 +1160,35 @@ template {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+  .reviews__title {
+    font-size: 18px;
+    line-height: 23px;
+    margin: 0 18px 42px;
+  }
+  .reviews-rating {
+    margin-right: 0;
+  }
+  .reviews-slider__button {
+    top: 32px;
+  }
+  .reviews-slider__button--prev {
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+    margin-left: -80px;
+  }
+  .reviews-slider__button--next {
+    right: 50%;
+    -webkit-transform: translate(50%, 0);
+            transform: translate(50%, 0);
+    margin-right: -80px;
+  }
+  .reviews-slider__item {
+    padding: 0 31px 36px;
+  }
+  .reviews-slider__item:before, .reviews-slider__item:after {
+    display: none;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1171,16 +1204,7 @@ template {
     padding-bottom: 30px;
   }
   .slider {
-    height: 250px;
     margin-bottom: 20px;
-  }
-}
-
-@media (max-width: 576px) {
-  .logo {
-    width: 99px;
-  }
-  .slider {
     height: 179px;
   }
   .hotel-data {
