--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -43,6 +43,11 @@
         width: 340px
     .map
         width: 340px
+    .reviews
+        &-slider
+            &__item
+                max-width: 580px
+                padding: 0 62px 30px
 @media (max-width: 768px)
     .container
         max-width: 676px
@@ -100,6 +105,28 @@
             max-width: 676px
             width: 92%
             align-items: flex-start
+    .reviews
+        &__title
+            font-size: 18px
+            line-height: 23px
+            margin: 0 18px 42px
+        &-rating
+            margin-right: 0
+        &-slider
+            &__button
+                top: 32px
+                &--prev
+                    left: 50%
+                    transform: translate(-50%, 0)
+                    margin-left: -80px
+                &--next
+                    right: 50%
+                    transform: translate(50%, 0)
+                    margin-right: -80px
+            &__item
+                padding: 0 31px 36px
+                &:before, &:after
+                    display: none
 @media (max-width: 576px)
     .logo
         width: 99px
@@ -111,13 +138,7 @@
             padding-top: 30px
             padding-bottom: 30px
     .slider
-        height: 250px
         margin-bottom: 20px
-
-@media (max-width: 576px)
-    .logo
-        width: 99px
-    .slider
         height: 179px
     .hotel
         &-data
