--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -44,6 +44,10 @@
     .map
         width: 340px
     .reviews
+        &__title
+            margin-bottom: 70px
+            font-size: 30px
+            line-height: 38px
         &-slider
             &__item
                 max-width: 580px
@@ -145,7 +149,16 @@
             height: 403px
     .subscribe
         width: 100%
+    .reviews
+        &-slider
+            &__text
+                text-align: left
     .newsletter
         padding: 76px 0 83px 0
         &-title
             margin-bottom: 37px
+            font-size: 20px
+            line-height: 25px
+            &__strong
+                font-size: 30px
+                line-height: 38px
