--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -52,6 +52,9 @@
         right: 0
         top: 0
         background-color: $primary
+        font-weight: bold
+        font-size: 12px
+        line-height: 15px
         min-width: 65px
         max-width: 50%
         height: 100%
