--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -6,6 +6,7 @@
         line-height: 45px
         text-align: center
         text-transform: uppercase
+        margin-bottom: 70px
     &-slider
         &__avatar
             width: 90px
