--- a/css/style.css
+++ b/css/style.css
@@ -1008,6 +1008,91 @@ template {
   text-align: justify;
 }
 
+.activities {
+  padding: 60px 0 90px;
+}
+
+.activities__title {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+  text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 57px;
+  margin-top: 60px;
+}
+
+.activities-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.activities-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  border-radius: 6px;
+  width: 255px;
+  height: 255px;
+  position: relative;
+  padding: 24px 26px;
+  overflow: hidden;
+}
+
+.activities-item:before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
+  top: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.activities-item__img {
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -2;
+}
+
+.activities-item__title {
+  margin-top: auto;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  margin-bottom: 18px;
+}
+
+.activities-item__button {
+  font-family: Nunito;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  padding: 7px 22px;
+  cursor: pointer;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -1020,6 +1105,10 @@ template {
     width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
+  }
+  .activities-item {
+    width: 230px;
+    height: 230px;
   }
 }
 
@@ -1072,13 +1161,22 @@ template {
     width: 340px;
   }
   .reviews__title {
-    margin-bottom: 70px;
+    margin-bottom: 50px;
     font-size: 30px;
     line-height: 38px;
   }
   .reviews-slider__item {
     max-width: 580px;
     padding: 0 62px 30px;
+  }
+  .activities-wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .activities-item {
+    width: 340px;
+    height: 255px;
+    margin-bottom: 20px;
   }
 }
 
@@ -1163,6 +1261,16 @@ template {
   .map {
     width: 100%;
   }
+  .activities {
+    padding-bottom: 70px;
+  }
+  .activities__title {
+    margin-top: 50px;
+  }
+  .activities-item {
+    width: 49%;
+    height: 255px;
+  }
   .newsletter-wrapper {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1225,6 +1333,18 @@ template {
     height: 403px;
   }
   .subscribe {
+    width: 100%;
+  }
+  .activities {
+    padding-bottom: 60px;
+  }
+  .activities__title {
+    margin-bottom: 36px;
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .activities-item {
     width: 100%;
   }
   .reviews-slider__text {
