--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -98,12 +98,51 @@
             height: 255px
             margin-bottom: 20px
 @media (max-width: 768px)
+    body
+        padding-top: 78px
     .container
         max-width: 676px
         width: 92%
     .navbar
-        &-menu, &__search, &__user
+        &__search, &__user
+            &--mobile
+                &_hidden
+                    display: none
+                &_visible
+                    display: flex
+        &-menu
+            flex-direction: column
+            &__item
+                margin-bottom: 20px
+                &--mobile
+                    &_visible
+                        display: block
+        &-bottom
+            padding-top: 30px
             display: none
+            position: fixed
+            left: 0
+            right: 0
+            bottom: 0
+            top: 78px
+            &--visible
+                display: block
+        &--mobile
+            &_fixed
+                position: fixed
+                left: 0
+                top: 0
+                right: 0
+                z-index: 99
+        &__user
+            flex-direction: column
+            justify-content: center
+    .user
+        &__name
+            color: $light
+            margin-top: 10px
+        &__avatar 
+            margin-right: 0
     .menu
         &-btn
             display: flex
