--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -33,6 +33,8 @@
     .footer
         &-wrapper
             grid-row-gap: 40px
+            grid-template-columns: 25% 1fr 1fr 30%
+            grid-auto-rows: auto
         &__icon
             flex-basis: 48%
         &__input
@@ -42,10 +44,17 @@
                 grid-row: 3
                 grid-column: span 4
             &-form
+                max-width: 540px
                 grid-row: 4
-                grid-column: span 3
+                grid-column: span 4
         &__logo
             grid-row: 1/2
+            width: 104px
+        &__policies
+            margin-top: 23px
+            text-align: left
+            grid-column: 1 / 4
+            align-self: end
         &__social
             &-network
                 grid-row: 1/2
@@ -54,6 +63,10 @@
     .categories
         grid-row: 2 / 3
         grid-column: 1
+    .legal-info
+        margin-left: 0
+    .widget
+        margin-top: 23px
     .navbar
         &-top
             padding-top: 30px
@@ -68,7 +81,7 @@
                 line-height: 15px
     .search
         &__input
-            width: 340px
+            max-width: 340px
     .hotel
         &-grid
             flex-direction: column
@@ -97,6 +110,10 @@
             width: 340px
             height: 255px
             margin-bottom: 20px
+    .modal
+        &__dialog
+            width: 100%
+            max-width: 500px
 @media (max-width: 768px)
     body
         padding-top: 78px
@@ -235,6 +252,8 @@
         &-top
             padding-top: 30px
             padding-bottom: 30px
+        &__search
+            margin-bottom: 20px
     .slider
         margin-bottom: 20px
         height: 179px
@@ -267,6 +286,7 @@
                 line-height: 38px
     .footer
         &-wrapper
+            grid-auto-rows: min-content
             grid-template-columns: 1fr
             grid-row-gap: 30px
         &__info
@@ -279,13 +299,34 @@
         &__logo
             grid-row: 1
             grid-column: 1
+        &__social
+            &-network
+                display: flex
+                flex-wrap: wrap
+        &__ul
+            &-item
+                &--no
+                    &-margin
+                        margin-left: 0
         &__title
+            &--inline
+                flex-basis: 100%
+                margin-bottom: 22px
             &--mb-3
                 margin-bottom: 15px
+    .modal
+        &__dialog
+            width: 80%
+            padding: 20px
+        &__button
+            min-width: 100px
+
     .categories
         grid-column: 1
         grid-row: 5
     .social-network
+        display: flex
+        flex-wrap: wrap
         grid-column: 1
         grid-row: 2
     .additional-info
@@ -301,15 +342,18 @@
         grid-column: 1
         grid-row: 6
     .contact-form
-        margin-top: 30px
+        margin-top: 13px
         grid-column: 1
         grid-row: 7
     .policies
-        margin-top: 30px
+        margin-top: 0
         grid-column: 1
         grid-row: 8
     .widget
-        margin-top: 10px
+        margin-top: -20px
         grid-row: 9
         grid-column: 1
-        justify-self: flex-start;
+        justify-self: flex-start
+    .search
+        &__input
+            max-width: 245px
