--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -21,3 +21,18 @@ iframe
     frameborder: 0
     width: 100%
     height: 100%
+
+input
+    color: $footer-text
+    background: #FFFFFF
+    border-radius: 4px
+    font-size: 12px
+    line-height: 15px
+    height: 50px
+    padding: 0 23px
+
+.button
+    font-weight: bold
+    padding: 18px
+    min-width: 160px
+    min-height: 50px
