--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -56,22 +56,17 @@
     &__link, &__ul-link
         text-decoration: none
         color: inherit
-        font-size: 18px
-        line-height: 23px
+        font-size: 14px
+        line-height: 160%
     &__logo
         width: 166px
         grid-row: 1 / 3
         align-self: center
     &__input
-        color: $footer-text
-        background: #FFFFFF
-        border-radius: 4px
-        font-size: 12px
-        line-height: 15px
-        height: 50px
-        padding: 0 23px
         margin-bottom: 15px
         flex-basis: 48%
+        font-size: 12px
+        line-height: 15px
     &__form
         display: flex
         align-items: center
@@ -83,13 +78,10 @@
         border-radius: 4px
         font-size: 12px
         line-height: 15px
-        padding: 18px 23px
+        padding: 18px 23px 13px
         flex-basis: 100%
         margin-bottom: 23px
     &__button
-        padding: 18px
-        min-width: 160px
-        min-height: 50px
         &-wrapper
             width: 100%
             display: flex
@@ -131,3 +123,5 @@
 .widget
     grid-row-start: 5
     grid-column-start: 4
+.legal-info
+    margin-left: 70px
