--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -26,8 +26,8 @@
         grid-column: 4
         grid-row: 2
         flex-basis: 100%
-    .additional-info
         margin-left: 18px
+    .additional-info
         grid-column: 2/4
         grid-row: 2
     .footer
@@ -67,6 +67,8 @@
         margin-left: 0
     .widget
         margin-top: 23px
+    .contact-details
+        margin-top: 26px
     .navbar
         &-top
             padding-top: 30px
