--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -9,6 +9,7 @@
         grid-gap: 20px
         align-items: start
         grid-auto-rows: minmax(40px, min-content)
+        grid-row-gap: 60px
     &__ul
         padding: 0
         margin: 0
@@ -114,6 +115,9 @@
 .contact-details
     grid-column: span 2
     grid-row-start: 4
+    &__title
+        margin-bottom: 26px
+        margin-top: 
 .contact-form
     grid-column: span 2
     grid-row-start: 4
