--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -63,7 +63,13 @@
         line-height: 23px
         margin-bottom: 15px
         text-align: center
+        &--mt-0
+            margin-top: 0
     &__button
+        font-style: normal
+        font-weight: bold
+        font-size: 12px
+        line-height: 15px
         &-wrapper
             width: 100%
             display: flex
