--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,7 +15,8 @@
             height: 230px
     .footer
         &__input
-            flex-basis: 100%
+            &-group
+                flex-basis: 100%
 @media (max-width: 992px)
     .newsletter-wrapper,
     .container
@@ -68,7 +69,7 @@
     .widget
         margin-top: 23px
     .contact-details
-        margin-top: 26px
+        margin-top: 21px
     .navbar
         &-top
             padding-top: 30px
@@ -243,7 +244,8 @@
                     display: none
     .footer
         &__input
-            flex-basis: 100%            
+            &-group
+                flex-basis: 100%            
 @media (max-width: 576px)
     .logo
         width: 99px
@@ -294,6 +296,8 @@
         &__info
             order: -1
             flex-basis: 100%
+            margin-bottom: 15px
+        &__textarea
             margin-bottom: 15px
         &__button
             &-wrapper
