--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -39,7 +39,7 @@
         font-size: 12px
         line-height: 15px
         width: 100%
-        margin-bottom: 15px
+        margin-top: 15px
     &__textarea
         color: $footer-text
         background: #FFFFFF
@@ -50,6 +50,7 @@
         width: 100%
         min-height: 123px
         margin-bottom: 15px
+        margin-top: 15px
     &__info
         font-weight: bold
         font-size: 12px
@@ -61,7 +62,6 @@
         font-weight: bold
         font-size: 18px
         line-height: 23px
-        margin-bottom: 15px
         text-align: center
         &--mt-0
             margin-top: 0
