--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -36,3 +36,8 @@ input
     padding: 18px
     min-width: 160px
     min-height: 50px
+
+.invalid
+    color: red
+    font-size: 12px
+    position: relative
